adjust css to hopefully align items in container correctly

--- a/style.css
+++ b/style.css
@@ -77,13 +77,6 @@ main {
 
 form {
 
-  align-items: center;
-  text-align: center;
-  margin: 16px 0px 0px 0px;
-  border: solid 2px #361002;
-  padding: 16px;
-  background-color: #6B5238;
-
 }
 
 input {
@@ -106,10 +99,12 @@ placeholder {
 }
 
 #firebase-auth-container {
+
   color: #F4DB9D;
   font-family: 'Kreon', serif;
   font-size: 20px;
   align-self: center;
+  align-items: center;
   text-align: center;
   margin: 16px 0px 0px 0px;
   border: solid 2px #361002;
@@ -124,6 +119,7 @@ label {
   margin: 16px 0px 0px 0px;
   font-size: 20px;
   align-self: center;
+  background-color: #6B5238;
 
 }
 #nupsu {
